<resources>
    <string name="app_name">AutoExpense</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_text">Your car expenses under one click</string>
    <string name="production_year_text">Production year:</string>
    <string name="mileage_label">Start mileage:</string>
    <string name="km_label">km</string>
    <string name="purchase_price_label">Purchase price:</string>
    <string name="capacity">Capacity:</string>
    <string name="horsepower">Horsepower:</string>
    <string name="ccm">ccm</string>
    <string name="km">KM</string>
    <string name="cylinders">Cylinders:</string>
    <string name="engine_information">Engine Information</string>
    <string name="l_100_km_label">l / 100 km</string>
    <string name="price_label">Price:</string>
    <string name="litres_label">Litres:</string>
    <string name="litre_l_label">l</string>
    <string name="per_100km_label">/ 100km</string>
    <string name="edit_car">Edit Car</string>
    <string name="save">Save</string>
    <string name="make">Make:</string>
    <string name="car_make_hint">Car make</string>
    <string name="model">Model:</string>
    <string name="add_new_car">Add new car</string>
    <string name="car_model">Car model</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="fuel_price_per_liter">Fuel price per liter</string>
    <string name="total_litres">Total litres</string>
    <string name="car_mileage">Car Mileage:</string>
    <string name="car_mileage_after_refuel">Car Mileage After Refuel</string>
    <string name="expense_date">Expense Date:</string>
    <string name="extended_fab_content_desc">Add fuel expense</string>
    <string name="extended_fab_label">Add Fuel Expense</string>
    <string name="empty_field_error">Field cannot be empty</string>
    <string name="invalid_date_error">Please enter valid date</string>
    <string name="add_engine">Add Engine</string>
    <string name="edit_engine">Edit Engine</string>
    <string name="engine_capacity">Engine capacity in ccm</string>
    <string name="engine_horsepower">Engine horsepower</string>
    <string name="number_of_cylinders">Number of cylinders</string>
    <string name="internet_connection_error">Check your internet connection</string>
    <string name="operation_failed_error">Couldn\'t save data, try again later</string>
    <string name="retry">Please retry</string>
    <string name="sign_out">Sign Out</string>
</resources>