<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".carinformation.engine.SaveOrUpdateEngineFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/editEngineCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.cardview.widget.CardView
                android:id="@+id/engineMiniatureCard"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/engine_image"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:padding="12dp"
                    app:srcCompat="@drawable/engine" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/edit_engine_label"
                style="@style/CarTitleText32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/edit_engine"
                app:layout_constraintBottom_toBottomOf="@+id/engineMiniatureCard"
                app:layout_constraintStart_toEndOf="@+id/engineMiniatureCard"
                app:layout_constraintTop_toTopOf="@+id/engineMiniatureCard" />

            <Button
                android:id="@+id/saveButton"
                style="@android:style/TextAppearance.Material.Widget.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:background="@color/colorBlue"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cylinders_text"
                app:layout_constraintVertical_bias="1.0"
                tools:targetApi="n" />

            <TextView
                android:id="@+id/capacity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/capacity"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/engineMiniatureCard"
                app:layout_constraintTop_toBottomOf="@+id/engineMiniatureCard" />

            <EditText
                android:id="@+id/capacity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/engine_capacity"
                android:inputType="number"
                app:layout_constraintBaseline_toBaselineOf="@+id/capacity_label"
                app:layout_constraintStart_toStartOf="@+id/edit_engine_label" />

            <TextView
                android:id="@+id/horsepower_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/horsepower"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/capacity_label"
                app:layout_constraintTop_toBottomOf="@+id/capacity_label" />

            <EditText
                android:id="@+id/horsepower_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/engine_horsepower"
                android:inputType="numberDecimal"
                app:layout_constraintBaseline_toBaselineOf="@+id/horsepower_label"
                app:layout_constraintStart_toStartOf="@+id/capacity_text" />

            <TextView
                android:id="@+id/cylinders_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/cylinders"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/horsepower_label"
                app:layout_constraintTop_toBottomOf="@+id/horsepower_label" />

            <EditText
                android:id="@+id/cylinders_text"
                android:layout_width="210dp"
                android:layout_height="43dp"
                android:ems="10"
                android:hint="@string/number_of_cylinders"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="2"
                app:layout_constraintBaseline_toBaselineOf="@+id/cylinders_label"
                app:layout_constraintStart_toStartOf="@+id/horsepower_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>