<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.misiak.android.autoexpense.mainscreen.saveorupdate.SaveOrUpdateViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/editCarCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:visibility="visible"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:visibility="visible">

            <androidx.cardview.widget.CardView
                android:id="@+id/carMiniatureCard"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/car_image"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:padding="8dp"
                    app:srcCompat="@drawable/car_miniature"
                    tools:srcCompat="@drawable/car_miniature" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/edit_car_label"
                style="@style/CarTitleText32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/edit_car"
                app:layout_constraintBottom_toBottomOf="@+id/carMiniatureCard"
                app:layout_constraintStart_toEndOf="@+id/carMiniatureCard"
                app:layout_constraintTop_toTopOf="@+id/carMiniatureCard" />

            <Button
                android:id="@+id/saveButton"
                style="@android:style/TextAppearance.Material.Widget.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:background="@color/colorBlue"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/purchase_price_text"
                app:layout_constraintVertical_bias="1.0"
                tools:targetApi="n" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/make"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/carMiniatureCard"
                app:layout_constraintTop_toBottomOf="@+id/carMiniatureCard" />

            <EditText
                android:id="@+id/make_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/car_make_hint"
                android:inputType="text"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="@+id/edit_car_label" />

            <TextView
                android:id="@+id/model_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/model"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <EditText
                android:id="@+id/model_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/car_model"
                android:inputType="textPersonName"
                app:layout_constraintBaseline_toBaselineOf="@+id/model_label"
                app:layout_constraintStart_toStartOf="@+id/make_text" />

            <TextView
                android:id="@+id/production_year_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/production_year_text"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/model_label"
                app:layout_constraintTop_toBottomOf="@+id/model_label" />

            <EditText
                android:id="@+id/production_year_text"
                android:layout_width="161dp"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:inputType="number"
                app:layout_constraintBaseline_toBaselineOf="@+id/production_year_label"
                app:layout_constraintStart_toEndOf="@+id/production_year_label" />

            <TextView
                android:id="@+id/mileage_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/mileage_label"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/production_year_label"
                app:layout_constraintTop_toBottomOf="@+id/production_year_label" />

            <EditText
                android:id="@+id/mileage_text"
                android:layout_width="162dp"
                android:layout_height="43dp"
                android:ems="10"
                android:inputType="number|numberDecimal"
                app:layout_constraintBaseline_toBaselineOf="@+id/mileage_label"
                app:layout_constraintStart_toStartOf="@+id/production_year_text" />

            <TextView
                android:id="@+id/purchase_price_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/purchase_price_label"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/mileage_label"
                app:layout_constraintTop_toBottomOf="@+id/mileage_label" />

            <EditText
                android:id="@+id/purchase_price_text"
                android:layout_width="161dp"
                android:layout_height="43dp"
                android:ems="10"
                android:inputType="number|numberDecimal"
                app:layout_constraintBaseline_toBaselineOf="@+id/purchase_price_label"
                app:layout_constraintStart_toStartOf="@+id/mileage_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>